# pyth-demo

./: .env.local  Anchor.toml  package.json  tsconfig.json
local_test_keys/: fee_and_rent_payer_keypair.json
migrations/: pyth-demo.ts
programs/pyth-demo/: Cargo.toml
programs/pyth-demo/src/: lib.rs
tests/: pyth-demo-helper.ts  pyth-demo.ts
